[gd_scene load_steps=20 format=3 uid="uid://3ye7b8bcvjox"]

[ext_resource type="Script" path="res://scripts/enemy_flying.gd" id="1_2h3j7"]
[ext_resource type="Script" path="res://scripts/health.gd" id="2_4l2rl"]
[ext_resource type="Texture2D" uid="uid://btvh2c4mxmmc0" path="res://my assets/sprites/NPCs/enemies/glitch-enemy - flying - Copy-Sheet.png" id="3_4bruv"]
[ext_resource type="Texture2D" uid="uid://rgcvhf3wyjs7" path="res://my assets/sprites/NPCs/enemies/glitch-enemy - flying - Copy-Sheet-die.png" id="4_81qb2"]
[ext_resource type="Script" path="res://scripts/hitbox.gd" id="5_jqja0"]
[ext_resource type="AudioStream" uid="uid://dcpiys7080kvk" path="res://assets/sounds/719129__sebastientate__splat-1.wav" id="6_m2rex"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i0grr"]
size = Vector2(5, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3ilv"]
atlas = ExtResource("3_4bruv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_isy1c"]
atlas = ExtResource("3_4bruv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovs13"]
atlas = ExtResource("3_4bruv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhmxr"]
atlas = ExtResource("3_4bruv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfsms"]
atlas = ExtResource("3_4bruv")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v3oe"]
atlas = ExtResource("3_4bruv")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqklv"]
atlas = ExtResource("4_81qb2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4vra"]
atlas = ExtResource("4_81qb2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bu2lr"]
atlas = ExtResource("4_81qb2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvtei"]
atlas = ExtResource("4_81qb2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ef4xp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3ilv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isy1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovs13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhmxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfsms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v3oe")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqklv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4vra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu2lr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvtei")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vn4xa"]
radius = 49.023

[node name="EnemyFlying" type="Area2D" groups=["enemies"]]
script = ExtResource("1_2h3j7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_i0grr")

[node name="Health" type="Node" parent="."]
script = ExtResource("2_4l2rl")
max_health = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ef4xp")
animation = &"die"
autoplay = "default"
flip_h = true

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(8, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-8, 0)

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 0
script = ExtResource("5_jqja0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_i0grr")

[node name="DetectionArea2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea2D"]
shape = SubResource("CircleShape2D_vn4xa")

[node name="SplatSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_m2rex")
bus = &"SFX"

[connection signal="health_depleted" from="Health" to="." method="_on_health_health_depleted"]
[connection signal="body_entered" from="DetectionArea2D" to="." method="_on_detection_area_2d_body_entered"]
[connection signal="body_exited" from="DetectionArea2D" to="." method="_on_detection_area_2d_body_exited"]
